[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossm_lab"
version = "0.1.0"
description = "Analysis Lab for sensorimotor modeling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }

authors = [
  { name = "Tonio Weidler", email = "research@tonioweidler.de" },
  { name = "Mario Senden", email = "mario.senden@maastrichtuniversity.nl" }
]

dependencies = [
    "numpy>=1.26",
    "pydantic>=2",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "xarray>=2024.2.0",

    "rsatoolbox>=0.3.0"
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
jax = ["jax>=0.4.21", "jaxlib>=0.4.21"]
viz = ["plotly>=5.19", "panel>=1.4"]
stats = ["statsmodels>=0.14", "pymc>=5.10"]
dev = ["pytest>=8.4.1"]

[project.entry-points."ossm_lab.protocols"]
